# phlo

./: .env.example  .gitignore  .sqruff  AGENTS.md  AIRBYTE_SETUP.md  ARCHITECTURE.md  ASSET_BASED_ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CONCURRENT_WRITE_DIAGNOSIS.md  CONTRIBUTING.md  DATAHUB_SETUP.md  DIAGNOSIS_SUMMARY.md  Dockerfile.app  FIXES.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  INSTALLABLE_PACKAGE_PLAN.md  INSTALLABLE_PACKAGE_PLAN_UPDATED.md  Makefile  NESSIE_WORKFLOW.md  NIGHTSCOUT_EXAMPLE.md  OPENLINEAGE_SETUP.md  PHASE8_FINDINGS.md  QUICK_START.md  README.md  REPOSITORY_OVERVIEW.md  TESTS.md  TEST_RESULTS.md  app.py  architecture.md  conftest.py  diagnose_locks.sql  docker-compose.yml  generate_parquet.py  index.html  mkdocs.yml  objects.inv  package-lock.json  port_analysis.md  (+7 more)
dagster/: Dockerfile  dagster.yaml  pyproject.toml  repository.py  requirements.txt  workspace.yaml
dagster/assets/: airbyte_assets.py  datahub_assets.py  dbt_assets.py  nightscout_assets.py  nightscout_validations.py  openlineage_airbyte.py  publish_assets.py  raw_data_assets.py
dagster/ingestion/: datahub_dbt.yml
dagster/jobs/: ingest_airbyte.py  transform_dbt.py  validate_ge.py
dagster/resource/: dbt.py  ge.py  openlineage.py  storage.py
dagster/schedules/: nightly.py
services/dagster/: pyproject.toml  workspace.yaml
services/dagster/schedules/: schedules.db
services/dagster/storage/: publish_glucose_marts_to_postgres
src/: pyproject.toml
src/cascade/: __init__.py  config.py  definitions.py  exceptions.py
src/cascade/cli/: __init__.py  create_workflow.py  main.py  scaffold.py  validate.py
src/cascade/defs/: jobs.py
src/cascade/defs/ingestion/: README.md  __init__.py  dlt_assets.py  github_assets.py
src/cascade/defs/jobs/: __init__.py  config.yaml  factory.py
src/cascade/defs/nessie/: __init__.py  branch_manager.py  operations.py  workflow.py
src/cascade/defs/publishing/: __init__.py  config.yaml  duckdb_to_postgres.py  trino_to_postgres.py
src/cascade/defs/quality/: __init__.py  github.py  nightscout.py
src/cascade/defs/resources/: __init__.py  ducklake.py  iceberg.py  trino.py
src/cascade/defs/schedules/: __init__.py  pipeline.py  schedules.py
src/cascade/defs/sensors/: __init__.py  branch_lifecycle.py  failure_monitoring.py  promotion_sensor.py  sensors.py
src/cascade/defs/transform/: __init__.py  dbt.py
src/cascade/defs/validation/: __init__.py  asset_checks.py  dbt_validator.py  freshness_validator.py  orchestrator.py  pandera_validator.py  schema_validator.py
src/cascade/defs/workflows/: __init__.py
src/cascade/dlt/: ducklake_destination.py
src/cascade/ducklake/: __init__.py  configuration.py  connection.py
src/cascade/framework/: __init__.py  definitions.py  discovery.py
src/cascade/iceberg/: __init__.py  catalog.py  schema.py  tables.py
src/cascade/ingestion/: __init__.py  decorator.py  dlt_helpers.py
src/cascade/plugins/: __init__.py  base.py  base.py.backup  discovery.py  examples.py  registry.py
src/cascade/quality/: __init__.py  checks.py  decorator.py  examples.py
src/cascade/schemas/: __init__.py  asset_outputs.py  converter.py  github.py  glucose.py  registry.py
src/cascade/testing/: __init__.py  placeholders.py
src/phlo/: __init__.py  config.py  config_schema.py  definitions.py  exceptions.py  ingestion.py  logging.py  transformer.py
src/phlo/alerting/: __init__.py  manager.py  sensor.py
src/phlo/alerting/destinations/: email.py
src/phlo/api/: __init__.py
src/phlo/api/hasura/: client.py  permissions.py  sync.py  track.py
src/phlo/api/observatory_api/: dagster.py  iceberg.py  lineage.py  loki.py  quality.py  search.py  trino.py
src/phlo/api/postgrest/: setup.py  views.py
src/phlo/capabilities/: __init__.py  discovery.py  registry.py  runtime.py  specs.py
src/phlo/catalog/: dbt_sync.py  lineage.py  nessie.py  openmetadata.py  quality_sync.py  sensors.py
src/phlo/cli/: __init__.py  alerts.py  api.py  backfill.py  branch.py  catalog.py  config.py  contract.py  create_workflow.py  env.py  lineage.py  logs.py  main.py  metrics.py  plugin.py  scaffold.py  schema.py  services.py  status.py  utils.py  validate.py
src/phlo/cli/_services/: __init__.py  command.py  compose.py  containers.py  selection.py  utils.py
src/phlo/contracts/: __init__.py  evolution.py  notifications.py  schema.py
src/phlo/core_services/observatory/: service.yaml
src/phlo/core_services/phlo-api/: main.py  service.yaml
src/phlo/core_services/phlo_api/: main.py  service.yaml
src/phlo/dagster/: __init__.py  partitions.py
src/phlo/defs/: jobs.py  partitions.py
src/phlo/defs/ingestion/: README.md  __init__.py
src/phlo/defs/jobs/: __init__.py  factory.py
src/phlo/defs/nessie/: __init__.py  branch_manager.py  operations.py
src/phlo/defs/publishing/: __init__.py  config.yaml  trino_to_postgres.py
src/phlo/discovery/: __init__.py  plugins.py  registry.py  services.py
src/phlo/framework/: __init__.py  definitions.py  discovery.py
src/phlo/hooks/: __init__.py  bus.py  emitters.py  events.py
src/phlo/iceberg/: __init__.py  tables.py
src/phlo/infrastructure/: config.py
src/phlo/ingestion/: __init__.py  decorator.py  dlt_helpers.py
src/phlo/lineage/: __init__.py  dbt_inject.py  graph.py  store.py
src/phlo/metrics/: __init__.py  collector.py
src/phlo/orchestrators/: __init__.py  selection.py
src/phlo/plugins/: __init__.py  base.py  discovery.py  examples.py  hooks.py  observatory.py  registry.py  registry_client.py  registry_data.json  semantic.py
src/phlo/publishing/: __init__.py  trino_to_postgres.py
src/phlo/quality/: __init__.py  checks.py  contract.py  dbt_asset_checks.py  decorator.py  examples.py  pandera_asset_checks.py  reconciliation.py
src/phlo/schemas/: __init__.py  base.py  converter.py  registry.py  type_mapping.py
src/phlo/services/: __init__.py  composer.py  discovery.py  native.py
src/phlo/settings/: __init__.py  service.py
src/phlo/testing/: __init__.py  execution.py  fixtures.py  local_mode.py  mock_dlt.py  mock_iceberg.py  mock_trino.py  placeholders.py
(+707 files in other folders)
