[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cascade"]

[project]
name = "cascade"
version = "0.1.0"
description = "Lakehouse platform"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-postgres",
    "dagster-aws",
    "dagster-dbt",
    "dagster-pandera",
    "dbt-core",
    "dbt-postgres",
    "dbt-trino",
    "pydantic-settings",
    "dlt",
    "pyiceberg[s3fs,pyarrow]",
    "pandas",
    "pandera",
    "trino",
    "requests",
    "psycopg2-binary",
    "click>=8.0",
    "rich>=13.0",
    "duckdb>=0.9.0",
    "pyarrow",
]

[project.scripts]
cascade = "cascade.cli.main:cli"

# Plugin entry point groups
# External plugins can register themselves in these groups
[project.entry-points."cascade.plugins.sources"]
# Example: my_source = "my_package.my_module:MySourceConnector"

[project.entry-points."cascade.plugins.quality"]
# Example: my_check = "my_package.my_module:MyQualityCheck"

[project.entry-points."cascade.plugins.transforms"]
# Example: my_transform = "my_package.my_module:MyTransform"

[tool.uv.workspace]
members = ["services/hub"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "basedpyright",
    "ty",
    "sqruff",
]

[tool.ty.environment]
root = ["./services/api"]
extra-paths = ["src"]
python = "/Users/garethprice/Developer/cascade/.venv/bin/python"

[tool.hatch.version]
source = "uv-dynamic-versioning"
# Note JSON schemas don't seem to be right for tool.hatch.version.source so
# this may cause false warnings in IDEs.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
