[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phlo"]
include = ["src/phlo/plugins/registry_data.json"]

[tool.hatch.build.targets.sdist]
include = ["src/phlo/plugins/registry_data.json", "registry/schema/v1.json", "registry/plugins.json"]

[project]
name = "phlo"
version = "0.3.0"
description = "Lakehouse platform"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dagster",
    "dagster-webserver",
    "pydantic-settings",
    "pandas",
    "pandera",
    "requests",
    "psycopg2-binary",
    "asyncpg>=0.30.0",
    "click>=8.0",
    "rich>=13.0",
    "duckdb>=0.9.0",
    "python-ulid>=2.0.0",
    "httpx>=0.28.1",
    "fastapi>=0.127.0",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
core-services = [
    "phlo-dagster>=0.1.0",
    "phlo-postgres>=0.1.0",
    "phlo-minio>=0.1.0",
    "phlo-nessie>=0.1.0",
    "phlo-trino>=0.1.0",
]
# Convenience alias - install all default services with: pip install phlo[defaults]
defaults = [
    "phlo-core-plugins>=0.1.0",
    "phlo-iceberg>=0.1.0",
    "phlo-dlt>=0.1.0",
    "phlo-dbt>=0.1.0",
    "phlo-dagster>=0.1.0",
    "phlo-postgres>=0.1.0",
    "phlo-minio>=0.1.0",
    "phlo-nessie>=0.1.0",
    "phlo-trino>=0.1.0",
]
openmetadata = [
    "phlo-openmetadata>=0.1.0",
]

[project.scripts]
phlo = "phlo.cli.main:cli"

# Plugin entry point groups
# External plugins can register themselves in these groups
[project.entry-points."phlo.plugins.sources"]
# Example: my_source = "my_package.my_module:MySourceConnector"

[project.entry-points."phlo.plugins.quality"]
# Example: my_check = "my_package.my_module:MyQualityCheck"

[project.entry-points."phlo.plugins.transforms"]
# Example: my_transform = "my_package.my_module:MyTransform"

[tool.uv.workspace]
members = [".", "packages/*"]

[tool.uv.sources]
phlo = { workspace = true }
phlo-core-plugins = { workspace = true }
phlo-iceberg = { workspace = true }
phlo-dlt = { workspace = true }
phlo-dbt = { workspace = true }
phlo-dagster = { workspace = true }
phlo-api = { workspace = true }
phlo-quality = { workspace = true }
phlo-lineage = { workspace = true }
phlo-alerting = { workspace = true }
phlo-highlightio = { workspace = true }
phlo-observatory = { workspace = true }
phlo-postgres = { workspace = true }
phlo-minio = { workspace = true }
phlo-nessie = { workspace = true }
phlo-trino = { workspace = true }
phlo-openmetadata = { workspace = true }
phlo-metrics = { workspace = true }
phlo-testing = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "sqlfluff>=3.5.0",
    "phlo-dlt>=0.1.0",
    "phlo-iceberg>=0.1.0",
    "phlo-dbt>=0.1.0",
    "phlo-nessie>=0.1.0",
    "phlo-openmetadata>=0.1.0",
    "phlo-metrics>=0.1.0",
    "phlo-testing>=0.1.0",
    "ruff",
    "ty",
    "testcontainers>=4.13.3",
    "pyiceberg[s3,sql]>=0.10.0",
    "s3fs>=2025.9.0",
    "testcontainers-minio>=0.0.1rc1",
    "highlight-io>=0.10.2",
]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["src", ".venv"]
# Skip integration tests by default - they require dbt manifest and running services
# Run integration tests with: pytest -m integration
addopts = "--ignore=src --continue-on-collection-errors -m 'not integration'"
markers = [
    "integration: marks tests as requiring external services or dbt manifest (run with '-m integration')",
]
filterwarnings = [
    # pyiceberg emits Pydantic v2.12 deprecations from @model_validator usage.
    # Suppress until upstream fixes: https://github.com/apache/iceberg-python/issues
    "ignore:Using `@model_validator` with mode='after' on a classmethod is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # Line too long - let the formatter handle this

[tool.ty.src]
exclude = ["**/testing/**"]  # Mock/placeholder code with dynamic imports

[tool.ty.environment]
root = ["./src"]
python-version = "3.11"
extra-paths = [
  "packages/phlo-alerting/src",
  "packages/phlo-alloy/src",
  "packages/phlo-api/src",
  "packages/phlo-core-plugins/src",
  "packages/phlo-dagster/src",
  "packages/phlo-dbt/src",
  "packages/phlo-dlt/src",
  "packages/phlo-grafana/src",
  "packages/phlo-highlightio/src",
  "packages/phlo-hasura/src",
  "packages/phlo-iceberg/src",
  "packages/phlo-lineage/src",
  "packages/phlo-loki/src",
  "packages/phlo-metrics/src",
  "packages/phlo-minio/src",
  "packages/phlo-nessie/src",
  "packages/phlo-observatory/src",
  "packages/phlo-openmetadata/src",
  "packages/phlo-pgweb/src",
  "packages/phlo-postgres/src",
  "packages/phlo-postgrest/src",
  "packages/phlo-prometheus/src",
  "packages/phlo-quality/src",
  "packages/phlo-superset/src",
  "packages/phlo-testing/src",
  "packages/phlo-trino/src",
]
