[project]
name = "cascade"
version = "0.1.0"
description = "Lakehouse data engineering toolkit"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyiceberg[s3fs,pyarrow]>=0.7.0",
    "requests",
    "pyarrow>=21.0.0",
    "duckdb>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cascade"]
