[project]
name = "cascade-dagster"
version = "0.1.0"
description = "Data lakehouse orchestration with Dagster"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "dagster",
    "dagster-webserver",
    "dagster-postgres",
    "dagster-dbt",
    "dagster-pandera",
    "dbt-trino",
    "dbt-postgres",
    "pandera>=0.18.0",
    "psycopg2-binary",
    "minio",
    "boto3",
    "pyyaml",
    "trino",
    "pandas>=2.0",
    "tenacity",
    "dlt[parquet]>=0.5.0",
    "pyiceberg[s3fs,pyarrow]>=0.7.0",
    "pyarrow>=21.0.0",
    "requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.ty]
environment.python-version = "3.11"

[tool.dagster]
module_name = "cascade.definitions"
